fixed colors for contrast issues

--- a/assets/css/main-page-green.scss
+++ b/assets/css/main-page-green.scss
@@ -130,7 +130,7 @@ box-shadow: 1px -1px 11px 4px rgba(0,0,0,0.47);
 
 .ui-state-hover, .ui-state-active {
   border-right: 8px solid #4F9E99;
-  background: rgba(79, 158, 153,0.1);
+  background: #4f9e991a;
   -webkit-border-top-left-radius: 50px;
   -webkit-border-bottom-left-radius: 50px;
   -moz-border-radius-topleft: 50px;
@@ -273,7 +273,7 @@ color:#005ea2;
     padding: 4rem 0;
 }
 .ui-tabs-active a {
-    color: #4F9E99;
+    color: #3b7673;
     font-weight: bold;
 }
 .paymentaccuracy{
@@ -1085,7 +1085,7 @@ abbr{
 }
 
 .dark-green-color {
-    color: #4f6a65;
+    color: #346865;
 }
 
 .ul-li-margin {
@@ -1096,28 +1096,28 @@ abbr{
     -moz-osx-font-smoothing: auto;
     -webkit-font-smoothing: subpixel-antialiased;
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px #33827d;
-    color: #33827d;
+    box-shadow: inset 0 0 0 2px #346865;
+    color: #346865;
 }
 
 .usa-button--outline:visited {
-    color: #33827d;
+    color: #346865;
 }
 
 .usa-button--outline:hover, .usa-button--outline.usa-button--hover {
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px #33827d;
+    box-shadow: inset 0 0 0 2px #346865;
     color: #1a4480;
 }
 
 .usa-button--outline:active, .usa-button--outline.usa-button--active {
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px #33827d;
-    color: #33827d;
+    box-shadow: inset 0 0 0 2px #346865;
+    color: #346865;
 }
 
 .usa-button--outline:hover {
-    color: #33827d;
+    color: #346865;
 }
 
 @media (min-width: 64em)
